<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".SegundaTela"
    android:id="@+id/mainlayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/escolha_uma_cor_para_o_fundo"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/red"
            app:backgroundTint="@null"
            android:background="@drawable/buttonred"
            android:text="@string/Red"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/green"
            app:backgroundTint="@null"
            android:background="@drawable/buttongreen"
            android:text="@string/Green"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/blue"
            app:backgroundTint="@null"
            android:background="@drawable/buttonblue"
            android:text="@string/Blue"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/random"
            app:backgroundTint="@null"
            android:background="@drawable/buttonrandom"
            android:text="@string/Random"
            />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            app:backgroundTint="@null"
            android:background="@drawable/buttonreset"
            android:text="@string/Reset"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="120dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_4"
        android:textSize="40dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="120dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backward"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>
    </LinearLayout>


</LinearLayout>